[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/aircraft/Aircraft.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/aircraft/players/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Tilemap/ships_packed.png" type="Texture" id=3]
[ext_resource path="res://src/projectiles/PlayerBulletA.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/SFX/explosion02.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/SFX/singleshot.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 8 )

[sub_resource type="Animation" id=3]
resource_name = "respawn"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="Player" instance=ExtResource( 1 )]
collision_mask = 2
script = ExtResource( 2 )
speed = 150.0
hit_damage = 10.0
bullet_scene = ExtResource( 4 )

[node name="ExplosionSFX" parent="." index="0"]
stream = ExtResource( 5 )

[node name="ShootingSFX" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 6 )

[node name="InvincibilityTimer" type="Timer" parent="." index="2"]
wait_time = 3.0
one_shot = true

[node name="GunTimer" parent="." index="3"]
wait_time = 0.25
one_shot = true

[node name="Sprite" parent="." index="4"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 64, 160, 32, 32 )

[node name="CollisionShape2D" parent="." index="5"]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="HitArea" parent="." index="6"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="HitArea" index="0"]
shape = SubResource( 2 )

[node name="Muzzle" parent="." index="7"]
position = Vector2( 0, -9 )

[node name="AnimationPlayer" parent="." index="9"]
anims/respawn = SubResource( 3 )

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
